BUILDENV: Migrated to jakarta, java 17 and made necessary changes